4.5-calico-enterprise-demo-ocp/1-policy-workflow/application-hardening-policies/staging-policies/4-yaobank-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: summary-policy
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
      - protocol: TCP
        port: 80
  egress:
    - to: []

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: customer-policy
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - ports:
      - protocol: TCP
        port: 80
  egress:
    - to: []
